// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSymbol should render if closed 1`] = `
.c1 {
  height: 24px;
  width: 24px;
}

.c1 svg {
  fill: rgba(0,0,0,.87);
}

.c0 {
  -webkit-transition: -webkit-transform 300ms ease;
  -webkit-transition: transform 300ms ease;
  transition: transform 300ms ease;
}

<div
  class="c0 c1"
>
  [object Object]
</div>
`;

exports[`ToggleSymbol should render if open 1`] = `
.c1 {
  height: 24px;
  width: 24px;
}

.c1 svg {
  fill: rgba(0,0,0,.87);
}

.c0 {
  -webkit-transition: -webkit-transform 300ms ease;
  -webkit-transition: transform 300ms ease;
  transition: transform 300ms ease;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

<div
  class="c0 c1"
>
  [object Object]
</div>
`;
